Impl: Rest of the things I don't know how to describe, general implementations using prev updated classes and other issue-resolving implementations