@@ -8,24 +8,24 @@ import online.theowlery.types.enums.GuildPermissions;
 import online.theowlery.types.interfaces.SlashCommandContract;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
+import java.util.List;
 
 @SlashCommand
-public class BanCommand implements SlashCommandContract {
+public class WarnCommand implements SlashCommandContract {
 
     @NotNull
     @Override
     public CommandDescriptor getDescriptor() {
         return CommandDescriptor.builder()
-                .id("ban")
+                .id("warn")
                 .category(CommandCategory.MODERATION)
-                .cooldown(30)
+                .cooldown(15)
                 .guildOnly(true)
-                .permissions(Collections.singletonList(GuildPermissions.BAN_MEMBERS))
+                .permissions(List.of(GuildPermissions.ADMINISTRATOR))
                 .build();
     }
 
-    @Override
     public void execute(CommandContext context) {
+        // Use warn service or something to warn a user about something
     }
 }
